# engineSandbox

./: CMakeLists.txt  CMakePresets.json  README.md
app/src/: main.cpp
engine/include/: GameWindowHandler.h  InputHandler.h  TickHandler.h  baseObject.h  camera.h  cameraController.h  circularQueue.h  colors.h  delegates.h  engine.h  engineEvents.h  fVector.h  globalFunctions.h  input.h  inputTester.h  logging.h  meshLoader.h  name.h  renderHandler.h  renderable.h  rendering.h  sceneInterface.h  tickableInterface.h  tickableObject.h  world.h
engine/include/core/: flags.h
engine/include/core/math/: STransform.h  SVector.h  mathCommon.h
engine/include/input/: inputCommon.h  inputFlags.h  inputHandler.h  keyboardInput.h  mouseInput.h
engine/include/rendering/: rendering.h
engine/src/: GameWindowHandler.cpp  InputHandler.cpp  TickHandler.cpp  baseObject.cpp  camera.cpp  cameraController.cpp  engine.cpp  globalFunctions.cpp  inputTester.cpp  logging.cpp  name.cpp  renderHandler.cpp  renderble.cpp  sceneInterface.cpp  tickableInterface.cpp  tickableObject.cpp  world.cpp
engine/src/input/: inputHandler.cpp
engine/src/rendering/: renderHandler.cpp
shaders/vertex/: vertexShader.hlsl
